# gallocy-rs

./: .travis.yml  Cargo.toml  Dockerfile  config.json  project
etc/: gallocy.init
src/: client.rs  config.rs  lib.rs  machine.rs  messages.rs  server.rs  state.rs  timer.rs
src/minihttp/: mod.rs  protocol.rs  request.rs  response.rs
