[package]
name = "raft"
version = "0.1.0"
authors = ["Stephen Holsapple <sholsapp@gmail.com>"]

[dependencies]
bytes = "0.4"
clap = "2.12.1"
env_logger = "0.3.5"
futures = "0.1.21"
httparse = "1.1.2"
log = "0.3.6"
net2 = "0.2"
num_cpus = "1.0"
rand = "*"
rustc-serialize = "0.3"
serde_json = "0.8"
time = "0.1"
tokio-core = "0.1.0"
tokio-io = "0.1"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
hyper = "0.12.5"

[[bin]]
name = "server"
path = "src/bin/daemon.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
