[package]
name = "raft"
version = "0.1.0"
authors = ["Stephen Holsapple <sholsapp@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4"
clap = "2.12.1"
env_logger = "0.7"
futures = "0.3"
httparse = "1.1.2"
hyper = "0.13"
log = "0.3.6"
net2 = "0.2"
num_cpus = "1.0"
rand = "0.7"
rustc-serialize = "0.3"
serde_json = "0.8"
time = "0.1"
tokio = { version = "0.2", features = ["full"] }
